--- a/GPA_Calculator_UI_2/GPA_Calculator_UI_2.csproj
+++ b/GPA_Calculator_UI_2/GPA_Calculator_UI_2.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Calculator.Designer.cs">
       <DependentUpon>Calculator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Course.cs" />
     <Compile Include="OutputForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +61,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Semester.cs" />
+    <Compile Include="Transcript.cs" />
     <EmbeddedResource Include="Calculator.resx">
       <DependentUpon>Calculator.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,12 +90,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GPA_Calculator_2\GPA_Calculator_2.csproj">
-      <Project>{4320f4ef-f918-4790-b6bd-bcf3d1c55778}</Project>
-      <Name>GPA_Calculator_2</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
