--- a/GPA_Calculator_UI_2/GPA_Calculator_UI_2.csproj
+++ b/GPA_Calculator_UI_2/GPA_Calculator_UI_2.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Semester.cs" />
+    <Compile Include="TestData.cs" />
     <Compile Include="Transcript.cs" />
     <EmbeddedResource Include="Calculator.resx">
       <DependentUpon>Calculator.cs</DependentUpon>
